# Smart-flood-warning-system

./: .gitignore  README.md
Code/Code main station/TramKiemSoat/: CMakeLists.txt  sdkconfig
Code/Code main station/TramKiemSoat/Du_lieu_tram_kiem_soat/: Readmefirst.txt
Code/Code main station/TramKiemSoat/Du_lieu_tram_kiem_soat/Code_khi_oled_con_hoat_dong/: CMakeLists.txt  Tramkiemsoat.c  dfplayer.h  ssd1306.c
Code/Code main station/TramKiemSoat/Du_lieu_tram_kiem_soat/Code_tram_do/: Tramdo.c
Code/Code main station/TramKiemSoat/Du_lieu_tram_kiem_soat/MQTT/: Code_belongto_anotherproject.txt
Code/Code main station/TramKiemSoat/main/: CMakeLists.txt  Tramkiemsoat.c
Code/Code main station/Tramkiemsoatupdate/: CMakeLists.txt  PULLUP_SUMMARY.md  partitions.csv  sdkconfig  sdkconfig.old
Code/Code main station/Tramkiemsoatupdate/Du_lieu_tram_kiem_soat/: Backup.txt  Readmefirst.txt
Code/Code main station/Tramkiemsoatupdate/Du_lieu_tram_kiem_soat/Code_khi_oled_con_hoat_dong/: dfplayer.c
Code/Code main station/Tramkiemsoatupdate/Du_lieu_tram_kiem_soat/Code_tram_do/: Tramdo.c
Code/Code main station/Tramkiemsoatupdate/Du_lieu_tram_kiem_soat/Nodered/: clode.json  (+9 more)
Code/Code main station/Tramkiemsoatupdate/main/: CMakeLists.txt  dfplayer.c  i2c_scanner.h  main.c
Code/Code measuring station/Tram_do/: CMakeLists.txt  README.md
Code/Code measuring station/Tram_do/Du_lieu_tram_do/: Do_an_ver1.txt  Readmefirst.txt
Code/Code measuring station/Tram_do/main/: CMakeLists.txt  Tramdo.c
Schematic và pcb/: Tramdo.PcbDoc  Tramdo.PrjPcb  Tramdo.PrjPcbStructure  Tramdo.SchDoc
(+5 files in other folders)
